basis for portfolio screen done
need to implement array thing

--- a/project/src/screens/CreatePostScreen/CreatePostScreen.css
+++ b/project/src/screens/CreatePostScreen/CreatePostScreen.css
@@ -23,7 +23,7 @@
     height: 20px;
 }
 .header-font {
-    font-family: 'Your Font Name', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 .submit-button {
     position: absolute;
