--- a/project/src/screens/CreatePostScreen/CreatePostScreen.css
+++ b/project/src/screens/CreatePostScreen/CreatePostScreen.css
@@ -1,11 +1,98 @@
+.create-post-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.create-post-success-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 40px;
+}
+
+.create-post-check-container {
+    display: flex;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    align-items: center;
+    justify-content: center;
+    border: solid 8px #78b13f;
+    padding: 15px;
+}
+
+.check-container {
+    --borderWidth: 8px;
+    --height: 70px;
+    --width: 25px;
+    --borderColor: #78b13f;
+}
+
+.create-post-success-msg {
+    font-size: 25px;
+}
+
+.create-post-button-container {
+    margin-top: 20px;
+}
+
+.create-post-button-link {
+    text-decoration: none;
+    color: white;
+}
+
+.check {
+    display: inline-block;
+    transform: rotate(45deg);
+    height: var(--height);
+    width: var(--width);
+    border-bottom: var(--borderWidth) solid var(--borderColor);
+    border-right: var(--borderWidth) solid var(--borderColor);
+}
+
+.create-post-form-container {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+    row-gap: 20px;
+    width: 600px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.02);
+    transition: 1s ease-in-out;
+}
+
+.user-input-error-msg {
+    color: red;
+}
+
+.create-post-top-container {
+    display: flex;
+}
+
+.create-post-header {
+    font-weight: 100;
+    font-size: 50px;
+}
+
+.create-post-label-container {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
 .large-chat-input {
     border: none;
     resize: none;
     overflow: visible;
-    border-radius: 4px;
+    border-radius: 6px;
     background-color: #f2f2f2;
     padding: 12px;
-    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     width: 95%;
     height: 100px;
@@ -14,39 +101,43 @@
     border: none;
     resize: none;
     overflow: visible;
-    border-radius: 4px;
+    border-radius: 6px;
     background-color: #f2f2f2;
     padding: 12px;
-    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     width: 95%;
     height: 20px;
 }
+
 .header-font {
-    font-family: 'Your Font Name', sans-serif;
+    font-weight: 400;
 }
 .submit-button {
-    position: absolute;
+    align-self: center;
     bottom: 0;
     right: 0;
-    width: 120px;
+    width: 100%;
     height: 50px;
     border-radius: 10px;
     background-color: #2c90fb;
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    border-width: 0;
+    color: white;
+    font-family: inherit;
+    cursor: pointer;
+    margin-top: 10px;
 }
 .submit-button:hover {
-    background-color: #0064d0;
+    background-color: #48a1ff;
+    transition: ease-in-out 0.2s;
 }
 .submit-button:active {
-    background-color: #0064d0;
+    background-color: #2c90fb;
     box-shadow: 2px 2px 4px #888888;
     transform: translateY(1px);
+    transition: ease-in-out 0.2s;
 }
-.form-container {
-    position: relative;
-}
+
 
 
 
