--- a/project/src/components/NavBar/NavBar.css
+++ b/project/src/components/NavBar/NavBar.css
@@ -5,10 +5,6 @@
 }
 
 .authentication-text-1 {
-    color: rgb(185, 185, 185);
+    color: rgba(255, 255, 255, 0.585);
     padding-right: 7px;
-}
-
-.authentication-text-2 {
-    font-weight: 600;
 }
